merge: new streamer
